@@ -185,6 +185,79 @@ void ast_ari_asterisk_list_modules(struct ast_variable *headers,
 	ast_ari_response_ok(response, json);
 }
 
+/*!
+ * \brief Identify module by name and process resource information
+ * \param module Resource name
+ * \param description Resource description
+ * \param usecnt Resource use count
+ * \param status Resource running status
+ * \param like
+ * \param support_level Resource support level
+ * \param data JSON body for resource
+ * \param condition Name to match resource to
+ *
+ * \retval 0 if no resource exists
+ * \retval 1 if resource exists
+ */
+static int identify_module(const char *module, const char *description, int usecnt,
+                           const char *status, const char *like,
+                           enum ast_module_support_level support_level, void *data,
+                           const char *condition)
+{
+	int json_obj_set = 0;
+
+	if (strcmp(condition, module) != 0) {
+		return 0;
+	}
+
+	json_obj_set += ast_json_object_set(data, "name", ast_json_string_create(module));
+	json_obj_set += ast_json_object_set(data, "description", ast_json_string_create(description));
+	json_obj_set += ast_json_object_set(data, "use_count", ast_json_integer_create(usecnt));
+	json_obj_set += ast_json_object_set(data, "status", ast_json_string_create(status));
+	json_obj_set += ast_json_object_set(data, "support_level", ast_json_string_create(
+	                                    ast_module_support_level_to_string(support_level)));
+	
+	if (json_obj_set != 0) {
+		return 0;
+	}
+
+	return 1;
+}
+
+void ast_ari_asterisk_get_module(struct ast_variable *headers,
+	struct ast_ari_asterisk_get_module_args *args,
+	struct ast_ari_response *response)
+{
+	struct ast_json *json;
+	int module_retrieved = 0;
+
+	ast_assert(response != NULL);
+
+	if (!ast_module_check(args->module_name)) {
+		ast_ari_response_error(
+			response, 404, "Not Found",
+			"Module does not exist");
+		return;
+	}
+
+	json = ast_json_object_create();
+	if (!json) {
+		ast_ari_response_alloc_failed(response);
+		return;
+	}
+
+	module_retrieved = ast_update_module_list_condition(&identify_module, NULL, json,
+	                                                    args->module_name);
+	if (!module_retrieved) {
+		ast_ari_response_error(
+			response, 409, "Conflict",
+			"Module information could not be retrieved");
+		return;
+	}
+
+	ast_ari_response_ok(response, json);
+}
+
 void ast_ari_asterisk_get_global_var(struct ast_variable *headers,
 	struct ast_ari_asterisk_get_global_var_args *args,
 	struct ast_ari_response *response)
